gl31-master/src/test/deca/context/valid/complet/cast4.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 24/01/2021
class A{}
class B extends A{}
{
    A a = new A();
    B b = new B();
    b = (B)(a);
    a = (B)(a);
}
