gl31-master/src/test/deca/context/invalid/complet/super_method_diferent1.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 14 : supermethod n'a pas la meme signature
//
// Historique:
//    cree le 19/01/2021

class A{
    int a;
    int c;
    int b(int r){}
    }
class B extends A{
    int j;
    int b(){}
}